git commit -m 'profile update'

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="description">
           <div>Email: <a class="contact" href="mailto:example.com">example.com</a></div>
           <div>Phone: <a class="contact" href="tel:123 456 789">123 456 789</a></div>
-          <div>Address: Abc, defg, hi.</div>
+          <div>Address: Thaketa, Yangon</div>
         </div>
       </div>
       <div class="line"></div>
@@ -30,21 +30,19 @@
             Education Background
           </div>
           <div class="description">
-            <div class="sub-title">B.A</div>
-            <div>University</div>
+            <div class="sub-title">B.E (Marine Engineering)</div>
+            <div>Myanmar Maritime University</div>
           </div>
       </div>
       <div class="line"></div>
       <div class="information-item">
           <div class="title">Work Experience</div>
           <div class="description">
-            <div class="sub-title">Work Title 1</div>
-            <div>Company 1</div>
-          </div>
-          <div class="description">
-            <div class="sub-title">Work Title 2</div>
-            <div>Company 2</div>
-          </div>            
+            <div class="sub-title">Freelancer</div>
+            <div>Digital Marketing</div>
+            <div>E-commerce Management</div>
+            <div>Wordpress Website Development</div>
+          </div>         
       </div>
     </div>
   </div>
