social links added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <div class="container">
@@ -12,6 +13,17 @@
       <img class="image" src="profile.png" alt="Profile Photo">
       <div class="name">Aung Khine Soe</div>
       <div class="role">Freelancer</div>
+      <div class="social">
+        <a href="https://github.com/aungkhinesoe">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/aungkhinesoe7/">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="https://www.facebook.com">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+      </div>
     </div>
     <div class="information">
       <div class="information-item">
@@ -19,9 +31,18 @@
           Personal Information
         </div>
         <div class="description">
-          <div>Email: <a class="contact" href="mailto:example.com">example.com</a></div>
-          <div>Phone: <a class="contact" href="tel:123 456 789">123 456 789</a></div>
-          <div>Address: Thaketa, Yangon</div>
+          <div class="contact-info">
+            <i class="fa-solid fa-envelope"></i> 
+            <a class="contact" href="mailto:example.com">example.com</a>
+          </div>
+          <div class="contact-info">
+            <i class="fa-solid fa-phone"></i> 
+            <a class="contact" href="tel:123 456 789">123 456 789</a>
+          </div>
+          <div class="contact-info">
+            <i class="fa-solid fa-map-location-dot"></i> 
+            Thaketa, Yangon
+          </div>
         </div>
       </div>
       <div class="line"></div>
